--- a/docs/less/content.less
+++ b/docs/less/content.less
@@ -339,6 +339,10 @@ h3 .section-anchor::before {
 
     > .delimited {
       display: inline-table;
+
+      > .close {
+        vertical-align: top;
+      }
     }
 
     .object-avatar {
